--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,7 @@
 version: 2.1
 orbs:
   node: circleci/node@5.0.1
+  docker: circleci/docker@2.1.4
 jobs:
   build:
     docker:
@@ -12,7 +13,38 @@ jobs:
       - run: |
           echo "Installing dependencies..."
           npm install
+
+  test:
+    docker:
+      - image: cimg/node:16.10
+    steps:
+      - checkout
+      - node/install-packages:
+        pkg-manager: npm
+      - run:
+        echo "Running test..."
+        npm run test
+
+        build-and-push:
+        executor: docker/docker #State the environment that we're use
+        steps:
+          - setup_remote_docker #This allows use to run docker commands just in case
+          - checkout
+          - docker/check
+          - docker/build:
+            image: cheefong0903/education-space
+            tag: 1.0.1
+          - docker/push:
+            image: cheefong0903/education-space
+            tag: 1.0.1
+
 workflows:
   simple_workflow:
     jobs:
       - build
+      - test:
+        requires:
+        - build
+      - build-and-push
+      requires:
+      - test
