--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,9 @@
 version: 2.1
+
 orbs: #packages
   node: circleci/node@5.0.1
   docker: circleci/docker@2.1.4 #allows us to use docker orb's commands
+
 jobs: #instructions for each step
   build: #build the application, ie install dependencies
     docker: #container to handle to steps
@@ -13,37 +15,39 @@ jobs: #instructions for each step
       - run: |
           echo "Installing dependencies..."
           npm install
-test:
+
+  test:
     docker:
       - image: cimg/node:16.10
     steps:
       - checkout
       - node/install-packages:
-        pkg-manager: npm
+          pkg-manager: npm
       - run: |
-        echo "Running test..."
-        npm run test
-build-and-push:
-        executor: docker/docker #State the environment that we're use
-        steps:
-          - setup_remote_docker #This allows use to run docker commands just in case
-          - checkout
-          - docker/check
-          - docker/build:
-            image: cheefong0903/education-space
-            tag: 1.0.1
-          - docker/push:
-            image: cheefong0903/education-space
-            tag: 1.0.1
+          echo "Running test..."
+          npm run test
+
+  build-and-push:
+    executor: docker/docker #State the environment that we're use
+    steps:
+      - setup_remote_docker #This allows use to run docker commands just in case
+      - checkout
+      - docker/check
+      - docker/build:
+          image: cheefong0903/education-space
+          tag: 1.0.1
+      - docker/push:
+          image: cheefong0903/education-space
+          tag: 1.0.1
 
 workflows: #defines how each job would run and relate to each other and
-            #
+  # any other dependent states (ex. only run if pushed to main branch)
   simple_workflow:
     jobs:
       - build
       - test:
-        requires:
-        - build
+          requires:
+            - build
       - build-and-push:
-      requires:
-      - test
+          requires:
+            - test
