--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,6 +4,7 @@ orbs: #packages
   node: circleci/node@5.0.1
   docker: circleci/docker@2.1.4 #allows us to use docker orb's commands
   heroku: circleci/heroku@2.0.0 #allows us to use heroku orb's commands
+  snyk: snyk/snyk@1.5.0 #3rd party orb of snyk
 
 jobs: #instructions for each step
   build: #build the application, ie install dependencies
@@ -36,26 +37,39 @@ jobs: #instructions for each step
       - docker/check
       - docker/build:
           image: cheefong0903/education-space
-          tag: << pipeline.git.tag >>
+          tag: 1.0.1
       - docker/push:
           image: cheefong0903/education-space
-          tag: << pipeline.git.tag >>
+          tag: 1.0.1
+    scan:
+      docker:
+        - image: cimg/node:16.10
+      environment:
+        IMAGE_NAME: terencegaffudsu/education-space #the IMAGE_NAME is a variable we could use in our jobs/steps
+      steps:
+        - checkout
+        - setup_remote_docker
+        - docker/check
+        - run: docker build -t $IMAGE_NAME .
+        # $IMAGE_NAME gets the value of the IMAGE_NAME from the environment defined above.
+        - snyk/scan:
+          docker-image-name: $IMAGE_NAME
 
-  deploy:
-    docker:
-      - image: cimg/node:16.10
-    steps:
-      - setup_remote_docker
-      - heroku/install #installs heroku cli for our run command
-      - checkout
-      - run:
-          name: Heroku Container Push #the name of the group of commands we are running
-          command: |
-            heroku container:login
-            heroku container:push web -a nelson-su-devops
-            heroku container:release web -a nelson-su-devops
-        #the push commands pusheds the image to heroku's container registry
-        #The release command deploys the image from heroku's container registry
+  # deploy:
+  #   docker:
+  #     - image: cimg/node:16.10
+  #   steps:
+  #     - setup_remote_docker
+  #     - heroku/install #installs heroku cli for our run command
+  #     - checkout
+  #     - run:
+  #         name: Heroku Container Push #the name of the group of commands we are running
+  #         command: |
+  #           heroku container:login
+  #           heroku container:push web -a nelson-su-devops
+  #           heroku container:release web -a nelson-su-devops
+  #       #the push commands pusheds the image to heroku's container registry
+  #       #The release command deploys the image from heroku's container registry
 
 workflows: #defines how each job would run and relate to each other and
   # any other dependent states (ex. only run if pushed to main branch)
@@ -81,7 +95,10 @@ workflows: #defines how each job would run and relate to each other and
             tags:
               only:
                 - /^v\d+\.\d+\.\d+$/ # Use a regular expression to match Semantic Versioning tags
-      - deploy:
+      # - deploy:
+      #     requires:
+      #       - build-and-push
+      - scan:
           requires:
-            - build-and-push
-# mini-exercise - add the deploy job so that it depends on build-and-push job
+            - build
+# mini-exercise - add the scan job so that it depends on the build job
