--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,15 +45,18 @@ jobs: #instructions for each step
     docker:
       - image: cimg/node:16.10
     environment:
-      IMAGE_NAME: terencegaffudsu/education-space #the IMAGE_NAME is a variable we could use in our jobs/steps
+      IMAGE_NAME: cheefong0903/education-space #the IMAGE_NAME is a variable we could use in our jobs/steps
     steps:
       - checkout
       - setup_remote_docker
       - docker/check
-      - run: docker build -t $IMAGE_NAME .
+      - run:
+          name: Build Docker Image
+          command: docker build -t $IMAGE_NAME .
         # $IMAGE_NAME gets the value of the IMAGE_NAME from the environment defined above.
       - snyk/scan:
         docker-image-name: $IMAGE_NAME
+        severity-threshold: "high, critical" # Filter vulnerabilities by severity
 
   # deploy:
   #   docker:
