created new file

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,23 +1,18 @@
 version: 2.1
-
-orbs: #packages
+orbs:
   node: circleci/node@5.0.1
-  docker: circleci/docker@2.1.4 #allows us to use docker orb's commands
-  heroku: circleci/heroku@2.0.0 #allows us to use heroku orb's commands
-  snyk: snyk/snyk@1.5.0 #3rd party orb of snyk
-
-jobs: #instructions for each step
-  build: #build the application, ie install dependencies
-    docker: #container to handle to steps
+  docker: circleci/docker@2.1.4
+jobs:
+  build:
+    docker:
       - image: cimg/node:16.10
     steps:
-      - checkout #copies the working directory of the project
+      - checkout
       - node/install-packages:
           pkg-manager: npm
       - run: |
           echo "Installing dependencies..."
           npm install
-
   test:
     docker:
       - image: cimg/node:16.10
@@ -26,82 +21,37 @@ jobs: #instructions for each step
       - node/install-packages:
           pkg-manager: npm
       - run: |
-          echo "Running test..."
+          echo "Running tests..."
           npm run test
-
   build-and-push:
-    executor: docker/docker #State the environment that we're use
+    executor: docker/docker
     steps:
-      - setup_remote_docker #This allows use to run docker commands just in case
+      - setup_remote_docker
       - checkout
       - docker/check
       - docker/build:
           image: cheefong0903/education-space
-          tag: 1.0.1
+          tag: <<pipeline.git.tag>>
       - docker/push:
           image: cheefong0903/education-space
-          tag: 1.0.1
-  scan:
-    docker:
-      - image: cimg/node:16.10
-    environment:
-      IMAGE_NAME: cheefong0903/education-space #the IMAGE_NAME is a variable we could use in our jobs/steps
-    steps:
-      - checkout
-      - setup_remote_docker
-      - docker/check
-      - run:
-          name: Build Docker Image
-          command: docker build -t $IMAGE_NAME .
-        # $IMAGE_NAME gets the value of the IMAGE_NAME from the environment defined above.
-      - snyk/scan:
-        docker-image-name: $IMAGE_NAME
-        severity-threshold: "high, critical" # Filter vulnerabilities by severity
+          tag: <<pipeline.git.tag>>
 
-  # deploy:
-  #   docker:
-  #     - image: cimg/node:16.10
-  #   steps:
-  #     - setup_remote_docker
-  #     - heroku/install #installs heroku cli for our run command
-  #     - checkout
-  #     - run:
-  #         name: Heroku Container Push #the name of the group of commands we are running
-  #         command: |
-  #           heroku container:login
-  #           heroku container:push web -a nelson-su-devops
-  #           heroku container:release web -a nelson-su-devops
-  #       #the push commands pusheds the image to heroku's container registry
-  #       #The release command deploys the image from heroku's container registry
-
-workflows: #defines how each job would run and relate to each other and
-  # any other dependent states (ex. only run if pushed to main branch)
-  version: 2
+workflows:
   simple_workflow:
     jobs:
       - build:
           filters:
             branches:
-              only:
-                - main
+              only: main
       - test:
           requires:
             - build
           filters:
             branches:
-              only:
-                - main
+              only: main
       - build-and-push:
-          requires:
-            - test
           filters:
             tags:
-              only:
-                - /^v\d+\.\d+\.\d+$/ # Use a regular expression to match Semantic Versioning tags
-      # - deploy:
-      #     requires:
-      #       - build-and-push
-      - scan:
-          requires:
-            - build
-# mini-exercise - add the scan job so that it depends on the build job
+              only: /^v.*/
+            branches:
+              ignore: /.*/
